part1/exer1.08/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-v0-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-v0-5
  template:
    metadata:
      labels:
        app: project-v0-5
    spec:
      containers:
        - name: project-v0-5
          image: numbers00/project-v0.5
