part1/exer1.08/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-v0-5-svc
spec:
  type: ClusterIP
  selector:
    app: project-v0-5
  ports:
    - protocol: TCP
      port: 2347
      targetPort: 8080
